updating to allow CORS

--- a/views/drawing.js.ejs
+++ b/views/drawing.js.ejs
@@ -9,7 +9,7 @@ var connection,
     canvas;
 
 function to_url(path) {
-  return '/' + path;
+  return 'http://<%= host %>/' + path;
 }
 
 function setup() {
