--- a/views/drawing.js.ejs
+++ b/views/drawing.js.ejs
@@ -15,6 +15,10 @@ function to_url(path) {
 function setup() {
   insert_canvas();
 
+  $.ajaxSetup({
+    xhrFields: { withCredentials: true }
+  });
+
   $.getJSON(to_url('config.json'), function(data) {
     if (data) {
       config = data;
@@ -116,7 +120,6 @@ function upload_points() {
     type: 'POST',
     url: to_url('lines.json'),
     data: {points: JSON.stringify(new_points)},
-    xhrFields: { withCredentials: true }
   });
   new_points = [];
 }
