--- a/views/drawing.js.ejs
+++ b/views/drawing.js.ejs
@@ -1,3 +1,5 @@
+(function($){
+
 var connection,
     oldMouseX = 0,
     oldMouseY = 0,
@@ -143,3 +145,5 @@ function valid(p) {
 }
 
 $(function() { setup(); });
+
+})(jQuery);
